fix: improve shift block at the gallery img

--- a/scss/components/_gallery-grid.scss
+++ b/scss/components/_gallery-grid.scss
@@ -30,7 +30,8 @@
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
 
     @media screen and (max-width: 450px) {
-      left: 41%;
+      left: 0;
+      transform: none;
     }
 
     h3 {
